--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
                     url: "players",
                     dataType: "json",
                     success: function (players) {
-                        if (length(players) == 0) {
+                        if (players.length == 0) {
                             $("#game").textContent = "No Players yet...";
                         }
                         players.forEach(function (player, index) {
