--- a/src/main/webapp/games/index.html
+++ b/src/main/webapp/games/index.html
@@ -21,6 +21,6 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="../js/board.js"></script>
 </body>
 </html>
