--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <script src="bower_components/jquery/dist/jquery.js"></script>
     </head>
-    <body onload="ready()">
+    <body>
         <div id="game" class="container">
             <h2 class="center">Welcome to our newgame!</h2>
             <!-- <div class="row"> -->
@@ -16,45 +16,14 @@
 	            </form>
             <!-- </div> -->
             <p style="padding: 15px"></p>
-            <div>
+            <div class="row">
                 <ul id="players" class="list-group">
+                    <li class="list-group-item col-md-6 col-md-offset-3"><span style="text-align: center">PLAYER NAME</span>
+                        <button class="col-md-2 btn-sm btn-success pull-right" onclick="">Play!</button></li>
                 </ul>
             </div>
         </div>
 
-        <script>
-            var ready = function() {
-                $.ajax({
-                    url: "players",
-                    dataType: "json",
-                    success: function (players) {
-                        if (players.length == 0) {
-                            $("#game").textContent = "No Players yet...";
-                        }
-                        players.forEach(function (player, index) {
-                            $('#players').append('<li id=' + index + ' class="list-group-item">' + player.name + '</li>');
-                        });
-                    }
-                });
-            };
-
-            var addplayer = function (index, playername) {
-                $('#players').append('<li id=' + index + ' class="list-group-item">' + playername + '</li>');
-            }
-
-            var create = function () {
-                playername = $("#name").val();
-                console.log(playername);
-                $.ajax({
-                    type: 'POST',
-                    url: 'players',
-                    data: playername,
-                    contentType: 'text/plain',
-                    success: function (result) {
-                        addplayer(result.id, result.name);
-                    }
-                });
-            }
-        </script>
+        <script type="text/javascript" src="js/home.js"></script>
     </body>
 </html>
