--- a/src/main/webapp/games/index.html
+++ b/src/main/webapp/games/index.html
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="row">
         <div class="col-md-6 col-md-offset-3">
+            <p id="info"></p>
             <table id="board" class="table table-bordered">
             </table>
             </div>
