--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,13 +17,25 @@
             <!-- </div> -->
             <p style="padding: 15px"></p>
             <div class="row">
-                <ul id="players" class="list-group">
-                    <li class="list-group-item col-md-6 col-md-offset-3"><span style="text-align: center">PLAYER NAME</span>
-                        <button class="col-md-2 btn-sm btn-success pull-right" onclick="">Play!</button></li>
-                </ul>
+                <div class="col-md-8">
+                    <ul id="players" class="list-group">
+                        <li class="list-group-item col-md-6 col-md-offset-2"><span style="text-align: center">PLAYER NAME</span>
+                            <button class="col-md-2 btn-sm btn-success pull-right" onclick="">Play!</button></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul id="inbox" class="list-group">
+                        <li id="msgId" class="row list-group-item">
+                            <span class="col-md-12" style="padding-top: 5px; padding-bottom: 8px">Player <i>player_name</i> wants to play with you..</span>
+                            <button type="button" class="col-md-4 col-md-offset-1 btn-success">YES</button>
+                            <button type="button" class="col-md-4 col-md-offset-2 btn-danger">No thanks</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
-        <script type="text/javascript" src="js/home.js"></script>
+        <script type="text/javascript" src="js/player.js"></script>
+        <script type="text/javascript" src="js/message.js"></script>
     </body>
 </html>
