--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,14 +5,16 @@
         <title>Cat Mouse Game</title>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script type="text/javascript" src="js/player.js"></script>
+        <script type="text/javascript" src="js/message.js"></script>
     </head>
     <body>
         <div id="game" class="container">
             <h2 class="center">Welcome to our newgame!</h2>
             <!-- <div class="row"> -->
-	            <form onsubmit="create()">
+	            <form id="registration" onsubmit="return formsubmit()">
 	                <input id="name" name="name" type="text" class="form-control" placeholder="Enter your name" required> <br/>
-	                <input type="button" class="btn btn-lg btn-primary" value="New Game" onclick="create()">
+	                <input type="button" class="btn btn-lg btn-primary" value="Join" onclick="create()">
 	            </form>
             <!-- </div> -->
             <p style="padding: 15px"></p>
@@ -35,7 +37,5 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="js/player.js"></script>
-        <script type="text/javascript" src="js/message.js"></script>
     </body>
 </html>
